--- a/index.html
+++ b/index.html
@@ -252,7 +252,70 @@
 
             <img src="./assets/Star 6 (1).png" alt="" class="main-container-star-lower">
         </div>
+        <img src="./assets/Star 8 (1).png" alt="" class="get-started-star-icon">
+    </section> 
 
+    <section class="details">
+        <div class="section-container-1">
+            <img src="./assets/Group (1).png" alt="" class="container-1-logo">
+            <div class="container-1-email">
+                <img src="./assets/Frame.png" alt="" class="container-1-email-icon">
+                <span>Help@Frybix.com</span>
+            </div>
+
+            <div class="container-1-phone">
+                <img src="./assets/Frame (1).png" alt="" class="container-1-phone-icon">
+                <span>+1 234 456 678 89</span>
+            </div>
+        </div>
+
+        <div class="section-container-2">
+            <h1>Links</h1>
+            <li>
+                <ul><a>Home</a></ul>
+                <ul><a>About Us</a></ul>
+                <ul><a>Bookings</a></ul>
+                <ul><a>Blog</a></ul>
+            </li>
+        </div>
+        <div class="section-container-3">
+            <h1>Legal</h1>
+            <li>
+                <ul><a>Terms of Use</a></ul>
+                <ul><a>Privacy Policy</a></ul>
+                <ul><a>Cookie Policy</a></ul>
+            </li>
+        </div>
+        <div class="section-container-4">
+            <h1>Product</h1>
+            <li>
+                <ul><a>Take Tour</a></ul>
+                <ul><a>Live Chat</a></ul>
+                <ul><a>Reviews</a></ul>
+            </li>
+        </div>
+        <div class="section-container-5">
+            <h1>Newsletter</h1>
+            <li>
+                <ul>Stay Up To Date</ul>
+                <ul>
+                    <div class="input-field">
+                        <input type="email" name="" id="email-input" placeholder="Your email">
+                        <button class="subscribe-button">
+                            Subscribe
+                        </button>
+                    </div>
+                </ul>
+            </li>
+        </div>
     </section>
+
+    <div class="fading-line-container">
+        <div class="fading-line"></div>
+    </div>
+
+    <footer>
+        <div class="copyright">Copyright 2022 Uifry.Com All Rights Reserved</div>
+    </footer>
 </body>
 </html>
